# computer-graphics

./: .gitignore  Observaciones.docx  Proyecto Final - Observaciones (Updated).docx  Proyecto Final - Observaciones.docx  README.md  Taller 2 - Observaciones.docx  Taller 5 - Observaciones.docx
game/: __init__.py  constants.py  physics_engine.py
moving-sphere-sample/: MovingSpheres.py  readme.md  resources.cfg
moving-sphere-sample/resources/: all.material
practical-example/: main.py  requirements.txt
project-car-with-misile/: README.MD
taller-conway-game-of-life/: Makefile  Observaciones.docx  division_trabajo.doc  readme.md  resultado_5_generaciones.pbm  test_main  test_output.pbm  visualizador.html
taller-conway-game-of-life/ejemplos/: blinker.pbm  block.pbm  ejemplo.pbm  glider.pbm  pulsar.pbm  toad.pbm
taller-conway-game-of-life/src/: archivo_pbm.cpp  archivo_pbm.h  entrada.pbm  generador_frames.cpp  generador_frames.h  glider.pbm  juego_vida.h  (+4 more)
taller-ogre-3d/: Dockerfile  readme.md
taller-ogre-3d-v3/: requirements.txt
taller-show-param/: basic_lights.cxx  build_and_run.sh  parametric.cxx  readme.md
taller-show-param/05_ShowParametricModel/05_ShowParametricModel/: App.cxx  CMakeBaseDefs.cmake  CMakeLists.txt  main.cxx
taller-show-param/05_ShowParametricModel/05_ShowParametricModel/lib/PUJ_GL/: BaseApp.h  Camera.h  Mesh.cxx  Mesh.h  Object.cxx  Object.h  OrthoBase.cxx  OrthoBase.h  ParametricModel.cxx  Scene.cxx  Scene.h  TrackballCamera.cxx
tejo-game/: MovingSpheres.py  TejoGame.py  TejoGame_trays.py  readme.md  requirements.txt  resources.cfg
(+57 files in other folders)
